--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Code Label PDF Generator</title>
 
+  <!-- Favicon (SVG icon in browser tab) -->
+  <link rel="icon" type="image/svg+xml" href="icon.svg" />
+  <!-- Optional PNG fallback
+  <link rel="icon" type="image/png" href="icon.png" />
+  -->
+
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -18,8 +24,6 @@
 </head>
 
 <body>
-  
-
   <div class="container-fluid">
     <!-- Title row with icon -->
     <div class="mb-4 d-flex align-items-start gap-2">
@@ -45,7 +49,7 @@
           <div class="card-body d-flex flex-column align-items-center">
             <h2 class="h6 mb-3 text-center w-100">Parameter illustration (not to scale)</h2>
             <div class="diagram-image-wrapper flex-grow-1 d-flex align-items-center justify-content-center w-100">
-              <img src="instructions.svg" alt="Layout parameter illustration" class="img-fluid diagram-image" />
+              <img src="diagram.svg" alt="Layout parameter illustration" class="img-fluid diagram-image" />
             </div>
             <div class="diagram-caption text-center mt-2">
               Each dotted rectangle is a label. Padding is the internal distance between the
