--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 
   <!-- Favicon (SVG icon in browser tab) -->
   <link rel="icon" type="image/svg+xml" href="icon.svg" />
-  <!-- Optional PNG fallback
-  <link rel="icon" type="image/png" href="icon.png" />
-  -->
 
   <!-- Bootstrap CSS -->
   <link
@@ -49,7 +46,8 @@
           <div class="card-body d-flex flex-column align-items-center">
             <h2 class="h6 mb-3 text-center w-100">Parameter illustration (not to scale)</h2>
             <div class="diagram-image-wrapper flex-grow-1 d-flex align-items-center justify-content-center w-100">
-              <img src="diagram.svg" alt="Layout parameter illustration" class="img-fluid diagram-image" />
+              <!-- renamed to instructions.svg -->
+              <img src="instructions.svg" alt="Layout parameter illustration" class="diagram-image" />
             </div>
             <div class="diagram-caption text-center mt-2">
               Each dotted rectangle is a label. Padding is the internal distance between the
