--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
     <div class="mb-4 d-flex align-items-start gap-2">
       <img src="icon.svg" alt="App icon" width="32" height="32" class="mt-1">
       <div>
-        <h1 class="h4 mb-1">Code Label PDF Generator</h1>
+        <h1 class="h4 mb-1">EntoScan Label Maker</h1>
         <p class="text-muted mb-0">
-          Generate sheets of DataMatrix or QR labels with configurable layout presets.
+          This small webapp is part of the [EntoScan](https://github.com/darsa-group/EntoScan/) project (a toolbox to make use of flatbed scanners to image insects).
+          The code for this webapp is available [here](https://github.com/darsa-group/EntoScan-labels/).
         </p>
+        <p class="text-muted mb-0">
+          In order to streamline the imaging process, it is highly recommended to print visible labels so that each sample/specimen/scan is visually tagged.
+          A simple way forward is to generate a set of unique labels that can be printed using a standard printer, either on standard paper or on label paper (i.e. precut sticky labels).
+          We propose that each label is both machine and human-readable (with both a 2D barcode and text). 
+          Ideally, labels are identifiers that one can map to metadata rather than a full descriptor of the image (we aim for labels shorter than 20 characters). 
+          This tool helps you input a list of label names (e.g., that you can copy-paste from a spreadsheet) and generate a printable PDF with all these labels in a parametric layout.
+        </p>
+        
       </div>
     </div>
 
