--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -26,10 +25,17 @@
     <div class="mb-4 d-flex align-items-start gap-2">
       <img src="icon.svg" alt="App icon" width="32" height="32" class="mt-1">
       <div>
-        <h1 class="h4 mb-1">EntoScan Label Maker</h1>
+       <h1 class="h4 mb-1">EntoScan Label Maker</h1>
         <p class="text-muted mb-0">
-          This small webapp is part of the [EntoScan](https://github.com/darsa-group/EntoScan/) project (a toolbox to make use of flatbed scanners to image insects).
-          The code for this webapp is available [here](https://github.com/darsa-group/EntoScan-labels/).
+           This small webapp is part of the
+  <a href="https://github.com/darsa-group/EntoScan/" target="_blank" rel="noopener noreferrer">
+    EntoScan
+  </a>
+  project (a toolbox to make use of flatbed scanners to image insects).
+  The code for this webapp is available
+  <a href="https://github.com/darsa-group/EntoScan-labels/" target="_blank" rel="noopener noreferrer">
+    here
+  </a>.
         </p>
         <p class="text-muted mb-0">
           In order to streamline the imaging process, it is highly recommended to print visible labels so that each sample/specimen/scan is visually tagged.
@@ -38,26 +44,27 @@
           Ideally, labels are identifiers that one can map to metadata rather than a full descriptor of the image (we aim for labels shorter than 20 characters). 
           This tool helps you input a list of label names (e.g., that you can copy-paste from a spreadsheet) and generate a printable PDF with all these labels in a parametric layout.
         </p>
-        
       </div>
     </div>
 
     <div class="row g-4 align-items-stretch">
       <!-- React app column -->
       <div class="col-lg-7 d-flex">
-        <!-- React will render a full-height card inside this -->
         <div id="root" class="flex-grow-1 d-flex"></div>
       </div>
 
       <!-- Diagram column -->
       <div class="col-lg-5 d-flex">
-        <div class="card shadow-sm diagram-panel flex-grow-1 h-100">
-          <div class="card-body d-flex flex-column align-items-center">
+        <div class="card shadow-sm diagram-panel flex-grow-1 d-flex">
+          <div class="card-body d-flex flex-column h-100">
             <h2 class="h6 mb-3 text-center w-100">Parameter illustration (not to scale)</h2>
+
+            <!-- This wrapper is what will flex to fill height -->
             <div class="diagram-image-wrapper flex-grow-1 d-flex align-items-center justify-content-center w-100">
               <!-- renamed to instructions.svg -->
               <img src="instructions.svg" alt="Layout parameter illustration" class="diagram-image" />
             </div>
+
             <div class="diagram-caption text-center mt-2">
               Each dotted rectangle is a label. Padding is the internal distance between the
               label boundary and its content (text + code), similar to CSS padding.
