--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid p-4">
     <!-- Title row with icon -->
     <div class="mb-4 d-flex align-items-start gap-2">
       <img src="icon.svg" alt="App icon" width="32" height="32" class="mt-1">
