--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Code Label PDF Generator</title>
+  <title>EntoScan Label Maker</title>
 
   <!-- Favicon (SVG icon in browser tab) -->
   <link rel="icon" type="image/svg+xml" href="icon.svg" />
